# libsweetparse

./: .gitignore  CMakeLists.txt  README.md  example.swexp  makefile
example/: sweetparse.c
src/: .datatypes.c.swp  .sweetparse.c.swo  .sweetparse.c.swp  :w  charclasses.c  charclasses.h  datatypes.c  datatypes.h  sweetexpressions.c  sweetexpressions.h  sweetparse.c
src/sweetexpressions/: charclasses.c  charclasses.h  datatypes.c  datatypes.h  parser.c  parser.h  stream.c  stream.h  sweetexpressions.c  sweetexpressions.h
tests/: example.swexp.output  run_tests.sh  sweet_test.c
